css/style.css
@import url('http://fonts.cdnfonts.com/css/hero-new');

* {
    font-family: "Hero New", sans-serif;
    margin: 0;
    padding: 0;
    background-color: rgb(67, 120, 102);
}

.container {
    display: flex;
    justify-content: space-between;
    height: 4rem;
    align-items: center;
    flex-wrap: wrap;
    padding: 1rem;
    height: auto;
    gap: 1rem;
}

nav {
    background-color: rgb(67, 120, 102);
}

.logo {
    color: silver;
    font-weight: bolder;
    font-size: x-large;
    margin-left: 10%;
}

.nav {
    display: flex;
    gap: 2rem;
    margin: 0 10%;
    font-size: large;
}

a {
    text-decoration: none;
    color: silver;
}

a:hover {
    color:#026023;
    transition: 0.4s;
}

ul {
    list-style-type: none;
}

@media(max-width: 768px) {
    .container {
        flex-direction: column;
        text-align: center;
    }

    .logo {
        margin-left: 0;
    }
}

.header.image {
    width: 32rem;
    height: auto;
    box-shadow: 1px 1px 2px black, 0 0 25px black, 0 0 5px black;
}

.container.two {
    justify-content: center;
    background-color: rgb(67, 120, 102);
    gap: 4rem;
    margin: 6rem 0;
}

.content {
    max-width: 32rem;
    color: white;
}

h1 {
    font-size: 50px;
    font-weight: bold;
}

.box {
    background-color: #4CAF50;
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    border-radius: 1rem;
}

.box:hover {
    background-color:#026023;
    transition: 0.4s;
    cursor: grab;
}

.para {
    margin: 1rem 0;
}

li {
    font-weight: 300;
}

.container.three {
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    background-color: white;
}

.boxes,
.texts {
    display: flex;
    gap: 2rem;
    align-items: center;
    background-color: white;
    flex-wrap: wrap;
    justify-content: center;
}

.boxes div div {
    background-color: white;
    padding: 7rem;
    border: 4px solid rgb(47, 201, 47);
    border-radius: 1rem;
}

h2 {
    font-size: xx-large;
    background-color: white;
    margin: 2rem;
}

.texts * {
    max-width: 15rem;
    text-align: center;
    background-color: white;
}

.title {
    background-color: white;
}

.texts p {
    margin-bottom: 6rem;
    margin-top: 1rem;
}

.quote {
    font-style: italic;
    font-size: 30px;
    max-width: 60rem;
    font-weight: 300;
}

.container.four {
    height: 30rem;
    background-color: rgb(198, 198, 198);
    justify-content: center;
    flex-direction: column;
}

.container.four * {
    background-color: rgb(198, 198, 198);
}

.author {
    margin-left: 39%;
}

.container.five {
    height: 26rem;
    background-color: white;
    justify-content: center;
    flex-direction: column;
}

.container.inside {
    flex-basis: 35%;
    width: 70%;
    border-radius: 1rem;
    background-color: #19af41;
    justify-content: space-around;
}

.container.inside * {
    background-color: #19af41;
    color: white;
}

.box.two {
    border: 2px solid white;
}

.container.six {
    justify-content: center;
    height: 3rem;
    color: white;
    font-weight: 300;
}

